--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <link href="https://fonts.cdnfonts.com/css/sukar" rel="stylesheet" />
 
   <!-- Font Awesome -->
-  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="lib/fontawesome-free-7.0.0-web/css/fontawesome.min.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="lib/fontawesome-free-7.0.0-web/css/fontawesome.min.css" />
   <link rel="stylesheet" href="lib/fontawesome-free-7.0.0-web/css/brands.min.css" />
   <link rel="stylesheet" href="lib/fontawesome-free-7.0.0-web/css/regular.min.css" />
   <link rel="stylesheet" href="lib/fontawesome-free-7.0.0-web/css/solid.min.css" />
-  <!-- <link rel="stylesheet" href="lib/fontawesome-free-7.0.0-web/css/svg-with-js.min.css"> -->
+  <link rel="stylesheet" href="lib/fontawesome-free-7.0.0-web/css/svg-with-js.min.css"> -->
 
   <!-- Libraries Stylesheet -->
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
@@ -747,5 +747,6 @@
   <!-- Template Javascript -->
   <script src="js/main.js"></script>
 </body>
+
 
 </html>
