--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
   <link href="https://fonts.cdnfonts.com/css/sukar" rel="stylesheet" />
 
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/brands.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/fontawesome.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/regular.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/solid.min.css" rel="stylesheet">
   <!-- <link rel="stylesheet" href="lib/fontawesome-free-7.0.0-web/css/fontawesome.min.css" />
   <link rel="stylesheet" href="lib/fontawesome-free-7.0.0-web/css/brands.min.css" />
   <link rel="stylesheet" href="lib/fontawesome-free-7.0.0-web/css/regular.min.css" />
@@ -750,3 +754,4 @@
 
 
 </html>
+
