--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
       </div>
     </div>
   </div>
-  <!-- Feature Start -->
+  <!-- Feature Ends -->
 
   <!-- Products Start -->
   <div class="container-fluid px-0 py-5">
-    
+
     <div class="row mx-0 justify-content-center pt-5">
       <div class="col-lg-6">
         <div class="section-title text-center position-relative mb-4">
@@ -270,7 +270,8 @@
               <span class="text-white">
                 <i class="fa-solid fa-plug-circle-bolt mr-2"></i>3kW - 5kW</span>
               <span class="text-white d-flex">
-                <img src="img/MPPT-icon.png" alt="MPPT Icon" class="mr-2" style="width:20px; margin-top: 0 !important;">2/3 MPPTs
+                <img src="img/MPPT-icon.png" alt="MPPT Icon" class="mr-2"
+                  style="width:20px; margin-top: 0 !important;">2/3 MPPTs
               </span>
             </div>
           </div>
@@ -291,7 +292,8 @@
               <span class="text-white">
                 <i class="fa-solid fa-plug-circle-bolt mr-2"></i>3kW - 6kW</span>
               <span class="text-white d-flex">
-                <img src="img/MPPT-icon.png" alt="MPPT Icon" class="mr-2" style="width:20px; margin-top: 0 !important;">2/3 MPPTs
+                <img src="img/MPPT-icon.png" alt="MPPT Icon" class="mr-2"
+                  style="width:20px; margin-top: 0 !important;">2/3 MPPTs
               </span>
             </div>
           </div>
@@ -305,90 +307,61 @@
         <img class="img-fluid" src="img/products/product-2.jpg" alt="" />
         <div class="courses-text">
           <h4 class="text-center text-white px-3">
-            Hybrid Inverter<br/>Single Phase Low Votage
+            Hybrid Inverter<br />Single Phase Low Votage
           </h4>
           <div class="border-top w-100 mt-3">
             <div class="d-flex justify-content-between p-4">
               <span class="text-white"><i class="fa-solid fa-plug-circle-bolt mr-2"></i>8kW - 12kW</span>
               <span class="text-white d-flex">
-                <img src="img/MPPT-icon.png" alt="MPPT Icon" class="mr-2" style="width:20px; margin-top: 0 !important;">2/3 MPPTs
+                <img src="img/MPPT-icon.png" alt="MPPT Icon" class="mr-2"
+                  style="width:20px; margin-top: 0 !important;">2/3 MPPTs
               </span>
             </div>
           </div>
           <div class="w-100 bg-white text-center p-4">
-            <a class="btn btn-primary" href="detail.html">Course Detail</a>
+            <a class="btn btn-primary" href="detail.html">Product Details</a>
           </div>
         </div>
       </div>
 
       <div class="courses-item position-relative">
-        <img class="img-fluid" src="img/courses-3.jpg" alt="" />
+        <img class="img-fluid" src="img/products/product-3.jpg" alt="" />
         <div class="courses-text">
           <h4 class="text-center text-white px-3">
-            Web design & development courses for beginners
+            Hybrid Inverter<br />Three Phase Low Votage
           </h4>
           <div class="border-top w-100 mt-3">
             <div class="d-flex justify-content-between p-4">
-              <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
-              <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
+              <span class="text-white"><i class="fa-solid fa-plug-circle-bolt mr-2"></i>5kW - 12kW</span>
+              <span class="text-white d-flex">
+                <img src="img/MPPT-icon.png" alt="MPPT Icon" class="mr-2"
+                  style="width:20px; margin-top: 0 !important;">2 MPPTs
+              </span>
             </div>
           </div>
           <div class="w-100 bg-white text-center p-4">
-            <a class="btn btn-primary" href="detail.html">Course Detail</a>
+            <a class="btn btn-primary" href="detail.html">Product Details</a>
           </div>
         </div>
       </div>
 
       <div class="courses-item position-relative">
-        <img class="img-fluid" src="img/courses-4.jpg" alt="" />
+        <img class="img-fluid" src="img/products/product-4.jpg" alt="" />
         <div class="courses-text">
           <h4 class="text-center text-white px-3">
-            Web design & development courses for beginners
+            Hybrid Inverter<br />Three Phase High Votage
           </h4>
           <div class="border-top w-100 mt-3">
             <div class="d-flex justify-content-between p-4">
-              <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
-              <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
+              <span class="text-white"><i class="fa-solid fa-plug-circle-bolt mr-2"></i>22kW - 50kW</span>
+              <span class="text-white d-flex">
+                <img src="img/MPPT-icon.png" alt="MPPT Icon" class="mr-2"
+                  style="width:20px; margin-top: 0 !important;">4 MPPTs
+              </span>
             </div>
           </div>
           <div class="w-100 bg-white text-center p-4">
-            <a class="btn btn-primary" href="detail.html">Course Detail</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="courses-item position-relative">
-        <img class="img-fluid" src="img/courses-5.jpg" alt="" />
-        <div class="courses-text">
-          <h4 class="text-center text-white px-3">
-            Web design & development courses for beginners
-          </h4>
-          <div class="border-top w-100 mt-3">
-            <div class="d-flex justify-content-between p-4">
-              <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
-              <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
-            </div>
-          </div>
-          <div class="w-100 bg-white text-center p-4">
-            <a class="btn btn-primary" href="detail.html">Course Detail</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="courses-item position-relative">
-        <img class="img-fluid" src="img/courses-6.jpg" alt="" />
-        <div class="courses-text">
-          <h4 class="text-center text-white px-3">
-            Web design & development courses for beginners
-          </h4>
-          <div class="border-top w-100 mt-3">
-            <div class="d-flex justify-content-between p-4">
-              <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
-              <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
-            </div>
-          </div>
-          <div class="w-100 bg-white text-center p-4">
-            <a class="btn btn-primary" href="detail.html">Course Detail</a>
+            <a class="btn btn-primary" href="detail.html">Product Details</a>
           </div>
         </div>
       </div>
@@ -754,4 +727,5 @@
 
 
 </html>
+
 
